# chessatiel

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_and_upload.sh  install.sh  perf.sh  profile.sh  rust-toolchain  tournament.sh
.github/workflows/: rust.yml
crates/beak/: Cargo.toml
crates/beak/src/: error.rs  lib.rs
crates/brain/: Cargo.toml
crates/brain/benches/: neural_networks.rs  search.rs  tt_size.rs
crates/brain/resources/: mnist.bincode  nn.bincode  pst.bincode  pst.json
crates/brain/src/: aggregator.rs  evaluator.rs  lib.rs  position_evaluator.rs  position_hash_history.rs  position_history.rs  priority_buffer.rs  searcher.rs  statistics.rs  time_manager.rs  transposition_table.rs
crates/brain/src/evaluator/: mod.rs  nn_evaluator.rs  piece_value.rs  test_evaluator.rs
crates/brain/src/evaluator/main_evaluator/: mod.rs
crates/brain/src/evaluator/pst_evaluator/: mod.rs  pst.rs
crates/brain/src/neural_networks/: heap_arrays.rs  mod.rs
crates/brain/src/neural_networks/data_structures/: heap_matrix.rs  heap_vector.rs  mod.rs
crates/brain/src/nn_support/: heap_arrays.rs  mod.rs
crates/brain/tests/: evaluation.rs
crates/chessatiel/: Cargo.toml
crates/chessatiel/src/: engine_manager.rs  input_handler.rs  lib.rs  main.rs  output_handler.rs
crates/chessatiel/src/brain/: aggregator.rs  centipawn.rs  engine.rs  evaluator.rs  info_emitter.rs  mod.rs  position_evaluator.rs  position_history.rs  position_manager.rs  resultinfo.rs  searcher.rs  searchresult.rs  statistics.rs  transposition_table.rs
crates/chessatiel/src/brain/searcher/: mod.rs
crates/chessatiel/src/engine/: mod.rs  position_manager.rs
crates/chessatiel/src/lichess/: account.rs  engine_handler.rs  game.rs  mod.rs
crates/chessatiel/src/profiling/: mod.rs
crates/chessatiel/src/uci/: engine_manager.rs  io_handlers.rs  mod.rs  protocol.rs
crates/chessatiel/tests/: evaluation.rs
crates/guts/: Cargo.toml
crates/guts/benches/: perft.rs  pieces.rs  unmake_vs_clone.rs
crates/guts/resources/test/: perfsuite_attribution.md
crates/guts/src/: bitboard.rs  castling_rights.rs  chess_move.rs  color.rs  fen.rs  file.rs  gamestate.rs  lib.rs  movegen.rs  parse_error.rs  piece.rs  position.rs  rank.rs  square.rs
crates/guts/src/board/: mod.rs  piece_board.rs
crates/guts/src/move_patterns/: king.rs  knight.rs  mod.rs  pawn.rs  sliders.rs
crates/guts/src/movegen/: king.rs  mod.rs  movebuffer.rs
crates/guts/src/movegen/tables/: knight.rs  mod.rs  squares_between.rs
crates/guts/src/position/: make_move.rs  mod.rs  zobrist.rs
crates/guts/tests/: divide.rs  perft.rs  perft_suite.rs
crates/seeds/: Cargo.toml  pst.txt
crates/seeds/src/: lib.rs  main.rs  pgn.rs  pst_optimization.rs  run_tournament.rs  train_mnist.rs  train_neural_network.rs
crates/support/: Cargo.toml  pst.txt
crates/support/src/: generate_tournament_openings.rs  lib.rs  main.rs  pgn.rs  pst_optimization.rs  run_tournament.rs
terraform/: main.tf  network.tf  providers.tf
