[workspace]

members = [
    "crates/brain",
    "crates/chessatiel",
    "crates/guts",
    "crates/seeds"
]

resolver = "2"

[profile.release]
lto = "thin"

[profile.perf]
inherits = "release"
debug = true

[profile.dev]
opt-level = 1

[profile.bench]
debug = true

[profile.dhat]
inherits = "release"
debug = true
