[package]
name = "brain"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guts = { path = "../guts" }
log = "0.4.17"
once_cell = "1.14.0"
tokio = { version = "1.21.0", features = ["sync", "macros", "rt", "time", "rt-multi-thread"] }
thiserror = "1.0.34"
bincode = "1.3.3"
itertools = "0.10.3"
rand = "0.8.5"
num = "0.4.0"
num-traits = "0.2.15"
rand_chacha = "0.3.1"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }

[[bench]]
name = "search"
harness = false

[[bench]]
name = "tt_size"
harness = false

[[bench]]
name = "neural_networks"
harness = false
