[package]
name = "brain"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guts = { path = "../guts" }
log = "0.4.22"
once_cell = "1.19.0"
tokio = { version = "1.39.2", features = ["sync", "macros", "rt", "time", "rt-multi-thread"] }
thiserror = "1.0.63"
bincode = "1.3.3"
itertools = "0.13.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "search"
harness = false

[[bench]]
name = "tt_size"
harness = false
