[package]
name = "chessatiel"
version = "0.1.0"
authors = ["Tim Evers <29369097+TVerse@users.noreply.github.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "chessatiel"

[dependencies]
anyhow = "1.0.65"
brain = { path = "../brain" }
bytes = "1.2.1"
clap = { version = "4.0.0", features = ["derive"] }
dhat = "0.3.1"
futures = "0.3.24"
guts = { path = "../guts" }
itertools = "0.10.5"
log = "0.4.17"
nom = "7.1.1"
reqwest = { version = "0.11.12", features = ["json", "stream"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
simplelog = "0.12.0"
sys-info = "0.9"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal", "io-std"] }
tokio-stream = "0.1.10"

[features]
dhat-heap = []
