[package]
name = "chessatiel"
version = "0.1.0"
authors = ["Tim Evers <29369097+TVerse@users.noreply.github.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "chessatiel"

[dependencies]
anyhow = "1.0.86"
brain = { path = "../brain" }
bytes = "1.7.1"
clap = { version = "4.5.15", features = ["derive"] }
dhat = "0.3.3"
futures = "0.3.30"
guts = { path = "../guts" }
itertools = "0.13.0"
log = "0.4.22"
nom = "7.1.3"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
simplelog = "0.12.2"
sys-info = "0.9"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "signal", "io-std"] }
tokio-stream = "0.1.15"

[features]
dhat-heap = []
