[package]
name = "guts"
version = "0.1.0"
authors = ["Tim Evers <29369097+TVerse@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
thiserror = "1.0.31"
itertools = "0.10.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
once_cell = "1.13.0"

[dev-dependencies]
paste = "1.0.7"
criterion = "0.3"

[[bench]]
name = "perft"
harness = false

[[bench]]
name = "pieces"
harness = false
