[package]
name = "guts"
version = "0.1.0"
authors = ["Tim Evers <29369097+TVerse@users.noreply.github.com>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6.0"
itertools = "0.13.0"
once_cell = "1.19.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
thiserror = "1.0.63"

[dev-dependencies]
criterion = "0.5"
paste = "1.0.15"

[[bench]]
name = "perft"
harness = false

[[bench]]
name = "pieces"
harness = false

[[bench]]
name = "unmake_vs_clone"
harness = false
