[package]
name = "seeds"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guts = { path = "../guts" }
brain = { path = "../brain" }
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive"] }
itertools = "0.10.3"
rayon = "1.5.3"
dhat = "0.3.0"
bincode = "1.3.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
git2 = "0.15.0"
tempfile = "3.3.0"

[features]
dhat-heap = []
