[package]
name = "seeds"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guts = { path = "../guts" }
brain = { path = "../brain" }
anyhow = "1.0.86"
clap = { version = "4.5.15", features = ["derive"] }
itertools = "0.13.0"
rayon = "1.10.0"
dhat = "0.3.3"
bincode = "1.3.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
git2 = "0.19.0"
tempfile = "3.12.0"

[features]
dhat-heap = []
